2011-12-24  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: The track IDs used for extraction are
	consistent again with the IDs that mkvmerge's identification
	reports. Fix for bug 689.

2011-12-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fix compilation if FLAC is not available. Fix
	for issue #13.

2011-12-18  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.2.0.

	* mkvmerge, mmg: bug fix: Automatic MIME type recognition for
	TrueType fonts will result in "application/x-truetype-font" again
	instead of "application/x-font-ttf". Fix for bug 682.

2011-12-14  Andriy Bilous'ko  <arestarh@ukr.net>

	* documentation: enhancement: Added a Ukrainian translation for
	mkvextract's man page.

2011-12-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: bug fix: Various elements used to have a space between
	their names and their value's hex dump. In v5.1.0 that space was
	accentally removed. It has been added again. Fix for bug 583.

2011-12-12  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Turn off input file buffering for badly
	interleaved MP4 files.

2011-12-11  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Changed how mkvmerge assigns IDs to tracks in
	source files for Matroska and MP4 files. That way files whose
	headers contain the same ID for multiple tracks will work
	correctly. Fix for bug 681.

2011-12-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: The VP8 output module will always
	re-derive frame types (key frame vs. non-key frame).

	* mkvmerge: bug fix: VP8 read from AVI could not be put into WebM
	compatible files.

	* mkvmerge: bug fix: Fixed a rare audio type mis-detection of
	MP2/MP3 audio tracks in MPEG program streams causing mkvmerge to
	abort with an error message.

2011-12-04  Nils Maier  <maierman@web.de>

	* mkvmerge, mkvextract: enhancement: Implemented input file
	buffering in mkvmerge and improved/implemented output file
	buffering in other tools.
